--- a/style.css
+++ b/style.css
@@ -61,3 +61,22 @@ box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0
   border-radius: 8px;
 }
 
+.contactus-container{
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 24px;
+
+}
+
+label{
+  display: block;
+  margin-left: 12px;
+}
+
+input, textarea{
+  width: 260px;
+  padding: 12px;
+  margin: 8px;
+  border: 1px solid #1E2738; 
+  border-radius: 8px;
+}
